--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInLeft">
           <div class="st-about-img-wrap">
-            <div class="st-about-img st-dynamic-bg st-bg" data-src="assets/img/section/about.jpg="></div>
+            <div class="st-about-img st-dynamic-bg st-bg" data-src="assets/img/section/trueman.png"></div>
           </div>
           <div class="st-height-b0 st-height-lg-b30"></div>
         </div>
