--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                 <div class="st-resume-timeline-duration">2023 - 2026</div>
                 <h4 class="st-resume-timeline-subtitle">Ashesi University</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                    ligula nulla, tincidunt id faucibus sed, suscipit feugiat turpis.</p>
+                  <p>Pursuing a degree in Mechatronics at Ashesi University under the Mastercard Foundation Scholar program.<br> 
+                    Deans List: 2023-2024.</p>
                 </div>
               </div> <!-- st-resume-timeline -->
               <div class="st-height-b50 st-height-lg-b30"></div>
