--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="st-resume-timeline-duration">2023 - 2026</div>
                 <h4 class="st-resume-timeline-subtitle">Ashesi University</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Pursuing a degree in Mechatronics at Ashesi University under the Mastercard Foundation Scholar program.<br> 
+                  <p>Pursuing a degree in Mechatronics at Ashesi University under the Mastercard Foundation Scholar program.<br/> 
                     Deans List: 2023-2024.</p>
                 </div>
               </div> <!-- st-resume-timeline -->
@@ -333,7 +333,8 @@
                   <p>Activities and societies: 
                     Debate Team<br />
                     Basketball first team<br />
-                    Life line</p>
+                    Life line<br />
+                    Senior Prefect</p>
                 </div>
               </div> <!-- st-resume-timeline -->
               <div class="st-height-b50 st-height-lg-b30"></div>
