--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h2 class="st-text-block-title">Hi there! I'm Trueman Mabumbo</h2>
                 <h4 class="st-text-block-subtitle">Engineering Student</h4>
                 <div class="st-text-block-text">
-                  <p>I am a Mechanical engineering major with a passion in agritech and use of robotics to enhance yields.</p>
+                  <p>I am a Mechatronics engineering major with a passion in agritech and use of robotics to enhance yields.</p>
                 </div>
                 <ul class="st-text-block-details st-mp0">
                   <li><span>Birthday</span> : <span>May 17, 2002</span></li>
