--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <ul class="st-nav-list st-onepage-nav">
                 <li><a href="#home" class="st-smooth-move">Home</a></li>
                 <li><a href="#about" class="st-smooth-move">About</a></li>
-                <li><a href="#resume" class="st-smooth-move">Resume</a></li>
+
                 <li><a href="#portfolio" class="st-smooth-move">Portfolio</a></li>
                 <li><a href="#contact" class="st-smooth-move">Contact</a></li>
               </ul>
@@ -77,7 +77,7 @@
       <img class="wow fadeInRight" src="assets/img/Trueman/Trueman Mabumbo.png" alt="Hero">
       <div class="st-social-group wow fadeInLeft">
         <div class="st-social-link">
-          <a href="https://www.linkedin.com/in/truemanhama/" class="st-social-btn">
+          <a href="https://www.linkedin.com/in/truemanhama/" class="st-social-btn" target="_blank" rel="noopener noreferrer">
             <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
             <span class="st-icon-name">LinkedIn</span>
 
@@ -85,7 +85,7 @@
             <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
             <span class="st-icon-name">Instagram</span>
           </a>
-          <a href="https://www.facebook.com/thmabumbo/" class="st-social-btn active">
+          <a href="https://www.facebook.com/thmabumbo/" class="st-social-btn active" target="_blank" rel="noopener noreferrer">
             <span class="st-social-icon"><i class="fab fa-facebook-f"></i></span>
             <span class="st-icon-name">Facebook</span>
           </a>
@@ -123,10 +123,9 @@
                 <h2 class="st-text-block-title">Hi there! I'm Trueman Mabumbo</h2>
                 <h4 class="st-text-block-subtitle">Engineering Student</h4>
                 <div class="st-text-block-text">
-                  <p>I am a Mechatronics engineering major with a passion in agritech and use of robotics to enhance yields.</p>
+                  <p>I am a Mechanical engineering major with a passion in agritech and use of robotics to enhance yields.</p>
                 </div>
                 <ul class="st-text-block-details st-mp0">
-                  <li><span>Birthday</span> : <span>May 17, 2002</span></li>
                   <li><span>Phone</span> : <span>+233 55 628 8787</span></li>
                   <li><span>Email</span> : <span>trueman.mabumbo@ashesi.edu.gh</span></li>
                   <li><span>From</span> : <span>1 University Avenue Berekuso Ghana</span></li>
@@ -134,7 +133,7 @@
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="https://drive.google.com/file/d/1d0ppGAI-S7QDmSfJzVPgMiuxOaxaPOeG/view?usp=share_link" class="st-btn st-style1 st-color1">My Resume</a>
+                  <a href="https://drive.google.com/file/d/1d0ppGAI-S7QDmSfJzVPgMiuxOaxaPOeG/view?usp=share_link" class="st-btn st-style1 st-color1" target="_blank" rel="noopener noreferrer">My Resume</a>
                 </div>
               </div>
             </div>
@@ -241,120 +240,6 @@
     </div>
   </section>
   <!-- End Skill Seciton -->
-
-  <!-- Start Resume Seciton -->
-  <section id="resume" class="st-dark-bg">
-    <div class="st-height-b100 st-height-lg-b80"></div>
-    <div class="container">
-      <div class="st-section-heading st-style1">
-        <h4 class="st-section-heading-title">RESUME</h4>
-        <h2 class="st-section-heading-subtitle">RESUME</h2>
-      </div>
-      <div class="st-height-b25 st-height-lg-b25"></div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <!-- Experience -->
-        <div class="col-lg-6">
-          <div class="st-resume-wrap">
-            <div class="st-resume-heading">
-              <img src="assets/img/icon/resume-icon1.png" alt="resume-icon">
-              <h2 class="st-resume-heading-title">Experience</h2>
-            </div>
-
-            <div class="st-height-b50 st-height-lg-b30"></div>
-
-            <div class="st-resume-timeline-wrap">
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">YouthLead Ambassador for YP2LE</h3>
-                <div class="st-resume-timeline-duration">July 2022 - Present</div>
-                <h4 class="st-resume-timeline-subtitle">Making Cents International</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Popularising the Youthlead platform amongst the young people and
-                    exposing them to the opportunities on the platform.
-                    Networking and initiating projects to further assist the young people
-                    in Zimbabwe.</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Digital Support Intern</h3>
-                <div class="st-resume-timeline-duration">Jan 2022 - July 2022</div>
-                <h4 class="st-resume-timeline-subtitle">UNESCO ROSA</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Conceptualised the expansion and upgrading of Dzidzo
-                    Paden|Imfundwe'ndlini
-                    Designed and executed social media campaigns for Dzidzo Paden,
-                    Young People Today, and Let's Talk EU
-                    Created and distributed social media content for Dzidzo Paden.</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Founder </h3>
-                <div class="st-resume-timeline-duration">Jan 2023 - Present</div>
-                <h4 class="st-resume-timeline-subtitle">EduTecX, Ghana</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                    ligula nulla, tincidunt id faucibus sed, suscipit feugiat turpis.</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-            </div>
-          </div>
-        </div>
-
-        <!-- Education -->
-        <div class="col-lg-6">
-
-          <div class="st-height-b0 st-height-lg-b50"></div>
-          <div class="st-resume-wrap">
-            <div class="st-resume-heading">
-              <img src="assets/img/icon/resume-icon2.png" alt="resume-icon">
-              <h2 class="st-resume-heading-title">Education</h2>
-            </div>
-            <div class="st-height-b50 st-height-lg-b30"></div>
-
-            <div class="st-resume-timeline-wrap">
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Bsc. Mechatronics Engineering</h3>
-                <div class="st-resume-timeline-duration">2023 - 2026</div>
-                <h4 class="st-resume-timeline-subtitle">Ashesi University</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Pursuing a degree in Mechatronics at Ashesi University under the Mastercard Foundation Scholar program.<br/> 
-                    Deans List: 2023-2024.</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">CIE Advanced Level</h3>
-                <div class="st-resume-timeline-duration">2020 - 2021</div>
-                <h4 class="st-resume-timeline-subtitle">St. George's College</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Activities and societies: 
-                    Debate Team<br />
-                    Basketball first team<br />
-                    Life line<br />
-                    Senior Prefect</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Leadership Training</h3>
-                <div class="st-resume-timeline-duration">2019 - 2019</div>
-                <h4 class="st-resume-timeline-subtitle">STAR Leadership Academy</h4>
-                <div class="st-resume-timeline-text">
-                  <p>First president of the STAR Leadership Academy's first Student Government Association. Responsible for ensuring that every student's concerns were prioritised and relayed to the admin.
-                    As Toastmasters president l was in charge of the whole society, its activities and creating a conducive environment for everyone to learn and grow.</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="st-height-b100 st-height-lg-b80"></div>
-  </section>
-  <!-- End Resume Seciton -->
 
   <!-- Start Portfolio Seciton -->
   <section id="portfolio">
