--- a/index.html
+++ b/index.html
@@ -55,46 +55,20 @@
     </div>
   </header>
   <!-- End Header Section -->
-
   <!-- Start Hero Seciton -->
-  <div class="st-height-b80 st-height-lg-b80"></div>
-  <section class="st-hero-wrap st-parallax">
-    <div class="st-hero st-style1 st-ripple-version">
-      <div class="container">
-        <div class="st-hero-text">
-          <h3>Hello, I’m</h3>
-          <h1>Trueman <br>Mabumbo
-          </h1>
-          <h2>Mechanical Engineering Student</h2>
-          <div class="st-hero-btn">
-            <a href="#contact" class="st-btn st-style1 st-color1 st-smooth-move">Hire me</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Hero Image - Social Link Group -->
-    <div class="st-hero-img st-to-right">
-      <img class="wow fadeInRight" src="assets/img/Trueman/Trueman Mabumbo.png" alt="Hero">
-      <div class="st-social-group wow fadeInLeft">
-        <div class="st-social-link">
+  <section class="st-hero st-style2 st-bg st-dynamic-bg st-ripple-version" data-src='assets/img/hero-bg-1.jpg'>
+    <div class="container">
+      <div class="st-hero-text">
+        <div class="st-author"><img src="assets/img/Trueman/Trueman Hama Mabumbo.png" alt=""></div>
+        <h1>Hi, I am <span>Trueman Mabumbo</span></h1>
+        <p>I am a Mechanical Engineering Major at Ashesi University.  <br>I also make website more & more interactive with web animations.</p>
+        <div class="st-hero-social-links">
           <a href="https://www.linkedin.com/in/truemanhama/" class="st-social-btn" target="_blank" rel="noopener noreferrer">
-            <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
-            <span class="st-icon-name">LinkedIn</span>
-
-          <a href="#" class="st-social-btn active">
-            <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
-            <span class="st-icon-name">Instagram</span>
-          </a>
-          <a href="https://www.facebook.com/thmabumbo/" class="st-social-btn active" target="_blank" rel="noopener noreferrer">
-            <span class="st-social-icon"><i class="fab fa-facebook-f"></i></span>
-            <span class="st-icon-name">Facebook</span>
-          </a>
-
+            <i class="fab fa-linkedin"></i>
           </a>
         </div>
       </div>
     </div>
-    <div id="particles-js"></div>
   </section>
   <!-- End Hero Seciton -->
 
@@ -133,7 +107,7 @@
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="https://drive.google.com/file/d/1d0ppGAI-S7QDmSfJzVPgMiuxOaxaPOeG/view?usp=share_link" class="st-btn st-style1 st-color1" target="_blank" rel="noopener noreferrer">My Resume</a>
+                  <a href="https://drive.google.com/file/d/1d0ppGAI-S7QDmSfJzVPgMiuxOaxaPOeG/view?usp=share_link" class="st-btn st-style1 st-color1" >My Resume</a>
                 </div>
               </div>
             </div>
