--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="st-hero-text">
         <div class="st-author"><img src="assets/img/Trueman/Trueman Hama Mabumbo.png" alt=""></div>
         <h1>Hi, I am <span>Trueman Mabumbo</span></h1>
-        <p>I am a Mechanical Engineering Major at Ashesi University.  <br>I also make website more & more interactive with web animations.</p>
+        <p>I am a Mechatronics Engineering Major at Ashesi University.  <br>I also make website more & more interactive with web animations.</p>
         <div class="st-hero-social-links">
           <a href="https://www.linkedin.com/in/truemanhama/" class="st-social-btn" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-linkedin"></i>
@@ -97,17 +97,17 @@
                 <h2 class="st-text-block-title">Hi there! I'm Trueman Mabumbo</h2>
                 <h4 class="st-text-block-subtitle">Engineering Student</h4>
                 <div class="st-text-block-text">
-                  <p>I am a Mechanical engineering major with a passion in agritech and use of robotics to enhance yields.</p>
+                  <p>I am a Mechatronics engineering major with a passion in agritech and use of robotics to enhance yields.</p>
                 </div>
                 <ul class="st-text-block-details st-mp0">
                   <li><span>Phone</span> : <span>+233 55 628 8787</span></li>
                   <li><span>Email</span> : <span>trueman.mabumbo@ashesi.edu.gh</span></li>
                   <li><span>From</span> : <span>1 University Avenue Berekuso Ghana</span></li>
                   <li><span>Language</span> : <span>English, ChiShona</span></li>
-                  <li><span>Freelance</span> : <span>Available</span></li>
+                  
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="https://drive.google.com/file/d/1d0ppGAI-S7QDmSfJzVPgMiuxOaxaPOeG/view?usp=share_link" class="st-btn st-style1 st-color1" >My Resume</a>
+                  <a href= "https://drive.google.com/file/d/1rtHzsOpIs0QTiqcXQNoquuLXxikXYvVn/view?usp=share_link" class="st-btn st-style1 st-color1" >My Resume</a>
                 </div>
               </div>
             </div>
